--- a/button-hover-border-drawing-effect/style.css
+++ b/button-hover-border-drawing-effect/style.css
@@ -9,7 +9,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
   background: #2f3542;
 }
