--- a/17-upload-button/style.css
+++ b/17-upload-button/style.css
@@ -5,6 +5,7 @@
   font-family: "PingFang SC", "Microsoft Yahei", sans-serif;
 }
 
+/* 把按钮居中 */
 main {
   display: flex;
   align-items: center;
@@ -13,46 +14,82 @@ main {
   height: 100vh;
 }
 
+/* 设置上传按钮样式 */
 .upload-button {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.upload-button button {
+  /* 样式 */
   width: 180px;
   height: 60px;
   background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
   border: none;
   border-radius: 8px;
+  cursor: pointer;
+  box-shadow: 0 2px 10px rgba(0, 147, 233, 0.28);
+
+  /* 子元素对齐 */
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
 
+/* 上传图标 */
 .upload-button svg {
   position: absolute;
 }
 
+/* 对勾，默认隐藏 */
+.upload-button .checkmark {
+  opacity: 0;
+}
+
+/* 上传时，箭头中间线的动画，虚线上行 */
 .upload-button.uploading .middle-line {
   stroke-dasharray: 4 3;
   animation: 0.8s linear dashLoop infinite;
 }
 
-.upload-button.uploaded .left-line {
-  transform-origin: 50% 50%;
-  animation: 2s linear leftLineTransform forwards;
+/* 上传图标圆形闪烁 */
+.upload-button.uploading circle {
+  animation: 1.5s linear blink infinite;
 }
 
-.upload-button.uploaded .right-line {
-  transform-origin: 50% 50%;
-  animation: 2s linear rightLineTransform forwards;
+/* 进度条样式 */
+.upload-button .progress-bar {
+  content: "";
+  display: block;
+  position: absolute;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  border-radius: 4px;
+  background-color: #85ffbd;
+  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
 }
 
+/* 上传完成后箭头上半部分动画, 画线回收效果, 最后透明度设置为0 */
+.upload-button.uploaded .arrow-top {
+  transform-origin: 50% 50%;
+  animation: 1s linear arrowTransform forwards;
+}
+
+/* 上传完成后对勾动画，画线效果 */
+.upload-button.uploaded .checkmark {
+  opacity: 1;
+  transform-origin: 50% 50%;
+  stroke-dasharray: 100 100;
+  stroke-dashoffset: 100;
+  animation: 1s linear checkMarkTransform forwards 0.5s;
+}
+
+/* 上传完成后，隐藏箭头中间的线 */
 .upload-button.uploaded .middle-line {
   stroke-dasharray: 4 3;
   transition: 0.3s linear;
   opacity: 0;
 }
 
+/* 箭头中间线虚线上行动画 */
 @keyframes dashLoop {
   from {
     stroke-dashoffset: 0;
@@ -62,45 +99,39 @@ main {
   }
 }
 
-@keyframes leftLineTransform {
+/* 圆形闪烁动画 */
+@keyframes blink {
   from {
-    transform: rotateX(0deg);
+    opacity: 1;
   }
-  20% {
-    transform: rotateX(-90deg);
-    stroke-dasharray: 100 100;
-    stroke-dashoffset: 100;
-  }
-  30% {
-    transform: rotateX(-180deg) translateY(2px) rotate(-5deg);
-    stroke-dasharray: 100 100;
-    stroke-dashoffset: 100;
+  50% {
+    opacity: 0.5;
   }
   to {
-    transform: rotateX(-180deg) translateY(2px) rotate(-5deg);
-    stroke-dasharray: 100 100;
-    stroke-dashoffset: 0;
+    opacity: 1;
   }
 }
 
-@keyframes rightLineTransform {
+/* 箭头变形动画 */
+@keyframes arrowTransform {
   from {
-    transform: rotateX(0deg);
-  }
-  20% {
-    transform: rotateX(-90deg);
     stroke-dasharray: 100 100;
-    stroke-dashoffset: 100;
+    stroke-dashoffset: 0;
   }
-  45% {
-    transform: rotateX(-180deg) rotate(15deg) translateX(-0.93px)
-      translateY(2.5px) scale(1.2);
+
+  to {
+    stroke-dasharray: 100 100;
+    stroke-dashoffset: -100;
+  }
+}
+
+/* 对勾动画 */
+@keyframes checkMarkTransform {
+  from {
     stroke-dasharray: 100 100;
     stroke-dashoffset: 100;
   }
   to {
-    transform: rotateX(-180deg) rotate(15deg) translateX(-3px) translateY(6px)
-      scale(1.2);
     stroke-dasharray: 100 100;
     stroke-dashoffset: 0;
   }
