--- a/17-upload-button/style.css
+++ b/17-upload-button/style.css
@@ -19,8 +19,8 @@ main {
   /* 样式 */
   width: 180px;
   height: 60px;
-  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
-  border: none;
+  background-image: linear-gradient(160deg, #0093e9, #80d0c7);
+
   border-radius: 8px;
   cursor: pointer;
   box-shadow: 0 2px 10px rgba(0, 147, 233, 0.28);
@@ -33,14 +33,19 @@ main {
   overflow: hidden;
 }
 
-/* 上传图标 */
-.upload-button svg {
-  position: absolute;
-}
-
 /* 对勾，默认隐藏 */
 .upload-button .checkmark {
   opacity: 0;
+}
+
+/* 进度条样式 */
+.upload-button .progress-bar {
+  position: absolute;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  border-radius: 4px;
+  background-image: linear-gradient(45deg, #85ffbd, #fffb7d);
 }
 
 /* 上传时，箭头中间线的动画，虚线上行 */
@@ -54,37 +59,21 @@ main {
   animation: 1.5s linear blink infinite;
 }
 
-/* 进度条样式 */
-.upload-button .progress-bar {
-  content: "";
-  display: block;
-  position: absolute;
-  height: 4px;
-  bottom: 0;
-  left: 0;
-  border-radius: 4px;
-  background-color: #85ffbd;
-  background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
-}
-
-/* 上传完成后箭头上半部分动画, 画线回收效果, 最后透明度设置为0 */
+/* 上传完成后箭头上半部分动画, 画线擦除动画, 最后透明度设置为0 */
 .upload-button.uploaded .arrow-top {
-  transform-origin: 50% 50%;
   animation: 1s linear arrowTransform forwards;
 }
 
 /* 上传完成后对勾动画，画线效果 */
 .upload-button.uploaded .checkmark {
   opacity: 1;
-  transform-origin: 50% 50%;
   stroke-dasharray: 100 100;
   stroke-dashoffset: 100;
-  animation: 1s linear checkMarkTransform forwards 0.5s;
+  animation: 1s linear checkmarkTransform forwards 0.5s;
 }
 
 /* 上传完成后，隐藏箭头中间的线 */
 .upload-button.uploaded .middle-line {
-  stroke-dasharray: 4 3;
   transition: 0.3s linear;
   opacity: 0;
 }
@@ -126,7 +115,7 @@ main {
 }
 
 /* 对勾动画 */
-@keyframes checkMarkTransform {
+@keyframes checkmarkTransform {
   from {
     stroke-dasharray: 100 100;
     stroke-dashoffset: 100;
