Add some javascript

--- a/23-fullwebsite-design-agency/style.css
+++ b/23-fullwebsite-design-agency/style.css
@@ -1,18 +1,578 @@
+/* scroll to reveal */
+html.sr .load-hidden {
+  visibility: hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: Helvetica, "PingFang SC", "Microsoft Yahei", sans-serif;
+  font-size: 14px;
 }
 
+img {
+  width: 100%;
+}
+
+:root {
+  --primary-color: #ff434f;
+  --secondary-color: #e3e3e3;
+  --text-color-lightest: #e7e9ec;
+  --text-color-darker: #2e2e2e;
+  --text-color-dark: #494949;
+  --text-color-gray: #8b8b8b;
+  --text-color-dark-gray: #727272;
+  --text-color-light-gray: #c6c6c6;
+  --backdrop-color: rgba(42, 42, 42, 0.69);
+}
+
+/* 头部 */
 header {
   width: 100vw;
+  height: 80px;
+
+  display: grid;
+  padding: 0 40px;
+
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+
+  position: relative;
+  z-index: 200;
+}
+
+/* logo */
+.logo {
+  font-size: 24px;
+  font-weight: 600;
+  color: var(--text-color-lightest);
+}
+
+/* 导航 */
+header nav {
+  justify-self: end;
+}
+
+header nav a {
+  color: var(--text-color-lightest);
+  text-decoration: none;
+  margin: 0 24px;
+}
+
+header nav i {
+  color: var(--text-color-lightest);
+}
+
+/* 幻灯 */
+.glide {
+  position: relative;
+  top: -80px;
+  /* 放置在最下层 */
+  z-index: 50;
+}
+
+/* 幻灯的图片和视频的大小 */
+.glide__slide img,
+.glide__slide video {
+  object-fit: cover;
+  width: 100vw;
   height: 100vh;
 }
 
-.slides img,
-.slides video {
+/* 幻灯片的布局 */
+.glide__slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 标语容器 */
+.slide-caption {
+  position: absolute;
+  /* 放置在遮罩上层 */
+  z-index: 70;
+  color: var(--text-color-lightest);
+  text-align: center;
+  max-width: 50vw;
+}
+
+.slide-caption > * {
+  opacity: 0;
+}
+
+/* 标语 */
+.slide-caption h1 {
+  font-size: 54px;
+  font-weight: 600;
+}
+
+/* 副标语 */
+.slide-caption h3 {
+  font-size: 24px;
+  margin: 48px 0;
+}
+
+.slide-caption.left {
+  max-width: 80vw;
+  text-align: left;
+}
+
+/* 遮罩层 */
+.backdrop {
+  background: var(--backdrop-color);
+  opacity: 0.5;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* 放置在幻灯片上层 */
+  z-index: 60;
+}
+
+.glide__arrows,
+.glide__bullets {
+  z-index: 70;
+}
+
+.explore-btn {
+  padding: 14px 32px;
+  background-color: var(--primary-color);
+  border: 0;
+  border-radius: 4px;
+  color: var(--text-color-lightest);
+  font-size: 18px;
+}
+
+/* 内容区域，通用样式  */
+.content-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* 所有section都按grid布局 */
+section {
+  display: grid;
+  justify-items: center;
+  max-width: 1180px;
+}
+
+/* 导航大标题 */
+.title1 {
+  justify-self: center;
+  position: relative;
+  font-size: 34px;
+  color: var(--text-color-darker);
+}
+/* 标题下方红线 */
+.title1::after {
+  content: "";
+  display: block;
+  width: 80%;
+  height: 4px;
+  transform: translateX(10%);
+  margin-top: 14px;
+  background-color: var(--primary-color);
+}
+
+/* 标题下方简介 */
+.intro {
+  margin: 28px 0 60px 0;
+  font-size: 18px;
+  color: var(--text-color-dark-gray);
+}
+
+.section-bg {
+  position: relative;
+}
+
+.section-bg::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: #f9fbfb;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
+  z-index: -1;
+}
+
+/* ***************************** */
+
+/* 关于我们 */
+.features {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 126px 126px;
+  column-gap: 124px;
+}
+
+.feature {
+  display: grid;
+  /* 规划栅格，图标占两行，标题和内容各占一行 */
+  grid-template-areas:
+    "icon title"
+    "icon content";
+  grid-template-columns: 60px 1fr;
+  grid-template-rows: 1fr 3fr;
+}
+
+/* 图标 */
+.feature i.fas {
+  grid-area: icon;
+  font-size: 34px;
+  color: var(--primary-color);
+}
+
+/* 标题 */
+.feature-title {
+  grid-area: title;
+  font-size: 18px;
+  color: var(--text-color-darker);
+}
+
+/* 内容 */
+.feature-content {
+  grid-area: content;
+  color: var(--text-color-gray);
+}
+
+/* 成功案例 */
+.showcases {
+  max-width: unset;
+  padding-top: 72px;
+}
+
+/* 案例筛选按钮容器 */
+.filter-btns {
+  margin-top: 54px;
+  margin-bottom: 38px;
+}
+
+/* 筛选按钮 */
+.filter-btn {
+  margin: 0 7px;
+  background-color: var(--secondary-color);
+  border: 0;
+  color: var(--text-color-dark-gray);
+  padding: 8px 18px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+/* 按钮选中时 */
+.filter-btn:focus,
+.filter-btn:active {
+  /* 去掉边框 */
+  outline: none;
+}
+
+.filter-btn.active,
+.filter-btn:hover {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+/* 案例容器 */
+.showcases .cases {
+  width: 100vw;
+}
+
+/* 案例 */
+.showcases .case-item {
+  /* 保持长宽比 */
+  width: 25vw;
+  height: 20vw;
+  overflow: hidden;
+}
+
+/* 案例图片 */
+.case-item img {
+  height: 100%;
   object-fit: cover;
+}
+
+/* 服务流程 */
+
+.service {
+  padding-top: 131px;
+}
+
+.services {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr 1fr;
+  column-gap: 38px;
+  row-gap: 34px;
+}
+
+.service-item {
+  display: grid;
+  grid-template-areas:
+    "icon title"
+    "icon content";
+  grid-template-columns: 70px 1fr;
+  grid-template-rows: 1fr 3fr;
+  padding: 24px;
+  box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.06);
+}
+
+.service-item i.fas {
+  grid-area: icon;
+  font-size: 42px;
+  color: var(--primary-color);
+  padding-top: 6px;
+}
+
+.service-item .service-title {
+  grid-area: title;
+  color: var(--text-color-darker);
+  font-size: 24px;
+}
+
+.service-item .service-content {
+  grid-area: content;
+  color: var(--text-color-gray);
+  line-height: 34px;
+  font-size: 16px;
+  align-self: center;
+}
+
+/* 团队介绍 */
+.team-intro {
+  margin-top: 48px;
+  padding-top: 62px;
+  padding-bottom: 52px;
+}
+
+.team-members {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 24px;
+  margin-top: 86px;
+}
+
+.team-member {
+  background-color: white;
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding-bottom: 28px;
+  transition: 0.4s;
+}
+
+.team-member:hover {
+  transform: translateY(-20px) scale(1.05);
+  box-shadow: 0px 0px 36px 0px rgba(0, 0, 0, 0.1);
+}
+
+.profile-image {
+  overflow: hidden;
+}
+
+.profile-image img {
+  width: 100%;
+  height: 264px;
+  object-fit: cover;
+  object-position: top center;
+}
+
+.team-member .name {
+  margin-top: 18px;
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--text-color-dark);
+}
+
+.team-member .position {
+  color: var(--text-color-dark-gray);
+  margin-top: 12px;
+  margin-bottom: 18px;
+}
+
+.social-links {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 42px;
+}
+
+.social-links li {
+  list-style: none;
+}
+
+.social-links li a {
+  color: var(--text-color-dark);
+  font-size: 20px;
+  text-decoration: none;
+}
+
+/* 数据 */
+.data-section {
+  max-width: unset;
+  width: 100vw;
+  height: 255px;
+  background-image: url(images/adult-business-computer-contemporary-380769.jpg);
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(auto, 220px));
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 20;
+}
+
+.data-section::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-color: var(--backdrop-color);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+.data-piece {
+  width: 250px;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  justify-items: center;
+  color: white;
+  position: relative;
+  z-index: 40;
+}
+
+.data-piece i.fas {
+  font-size: 44px;
+}
+
+.data-piece .num {
+  margin-top: 7px;
+  font-size: 41px;
+  font-weight: 600;
+}
+
+.data-piece .data-desc {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+/* 公司动态 */
+.company-activities {
+  margin-top: 88px;
+}
+
+.activities {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 24px;
+}
+
+.activity {
+  box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.1);
+  padding: 24px;
+}
+
+.act-image-wrapper {
+  height: 255px;
+  overflow: hidden;
+  margin: -24px;
+  margin-bottom: 0;
+}
+
+.act-image-wrapper img {
+  min-height: 300px;
+  object-fit: cover;
+}
+
+.activity .meta {
+  margin-top: 20px;
+  margin-bottom: 12px;
+  color: var(--text-color-light-gray);
+  font-size: 12px;
+  display: flex;
+}
+
+.activity .meta > p:last-child {
+  margin-left: 36px;
+}
+
+.act-title {
+  color: var(--text-color-dark);
+  font-size: 18px;
+  margin-bottom: 16px;
+}
+
+.activity article {
+  color: var(--text-color-gray);
+  letter-spacing: 0.54px;
+  line-height: 24px;
+}
+
+.readmore-btn {
+  border: 0;
+  color: white;
+  background-color: var(--primary-color);
+  border-radius: 4px;
+  padding: 6px 14px;
+  margin-top: 24px;
+}
+
+/* 底部 */
+footer {
+  margin-top: 124px;
+  background-color: #181818;
+  display: grid;
+  justify-items: center;
+  padding-top: 72px;
+  padding-bottom: 24px;
+}
+
+.footer-menus {
+  width: 100%;
+  max-width: 1180px;
+  display: grid;
+  grid-template-columns: 2fr repeat(4, 1fr);
+}
+
+.footer-menu {
+  justify-self: end;
+}
+
+.menu-title {
+  font-size: 16px;
+  color: white;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.contact-us {
+  justify-self: start;
+  color: var(--text-color-lightest);
+}
+
+.contact-us p:not(:first-child) {
+  padding-bottom: 16px;
+}
+
+.menu-items li {
+  list-style: none;
+  padding-bottom: 8px;
+}
+.menu-items li a {
+  text-decoration: none;
+  font-weight: 300;
+  color: var(--text-color-lightest);
+}
+
+.icp-info {
+  margin-top: 68px;
+  margin-bottom: 16px;
+}
+
+.icp-info,
+.rights {
+  grid-column: 1 / -1;
+  justify-self: center;
+  color: white;
 }
