--- a/02-login-form-glass-effect/style.css
+++ b/02-login-form-glass-effect/style.css
@@ -1,8 +1,7 @@
 html,
 body {
   margin: 0;
-  font-family: "PingFang SC", "Microsoft Yahei",
-    sans-serif;
+  font-family: "PingFang SC", "Microsoft Yahei", sans-serif;
 }
 
 .container {
@@ -11,8 +10,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url("https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3453&q=80")
-    fixed no-repeat;
+  background: url("./background.jpeg") fixed no-repeat;
   background-size: cover;
 }
 
@@ -39,8 +37,7 @@ body {
   left: -10px;
   overflow: hidden;
   background: inherit;
-  box-shadow: inset 0 0 0 200px
-    rgba(255, 255, 255, 0.25);
+  box-shadow: inset 0 0 0 200px rgba(255, 255, 255, 0.25);
   filter: blur(6px);
   z-index: -1;
 }
