--- a/36-tech-website/style.css
+++ b/36-tech-website/style.css
@@ -33,6 +33,11 @@ nav {
   font-size: 18px;
 }
 
+nav a {
+  text-decoration: none;
+  color: #000000;
+}
+
 .btn {
   width: 120px;
   height: 48px;
@@ -65,8 +70,6 @@ nav {
 
 .mainLeft button {
   background: #fcb671;
-  border: 2px solid #261c35;
-  border-radius: 0;
   box-shadow: -4px 6px #000000;
 }
 
@@ -76,35 +79,22 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .mainRight img {
   width: 100%;
   height: 100%;
-  /* padding-top: 120px; */
   object-fit: cover;
   object-position: bottom;
 }
 
 footer {
-  position: relative;
-  z-index: 1;
   padding-top: 32px;
-  background: #261c36;
 }
 
 .socialMedia {
   display: flex;
   align-items: center;
   gap: 64px;
-  position: relative;
-}
-
-.line {
-  position: absolute;
-  width: 100vw;
-  height: 6px;
-  background-color: #fcb671;
-  left: 0;
-  transform: translateY(20px);
 }
